<resources>
    //application wide
    <string name="app_name">Leaves</string>
    <string name="action_settings">Settings</string>
    <string name="parse_id">9nVNaNK86PKvBAwoChfqIbiHJO5Yjw2x4DuplQVe</string>
    <string name="parse_secret">dRuzXLKeMv5GBhDg1RM6LmyekR2WVNW7BfEX2U3p</string>
    <string name="project_name">LEAVES</string>
    <string name="action_logout">Logout</string>

    //get started activity
    <string name="title_activity_get_started">GetStartedActivity</string>
    <string name="get_started_btn">Get Started</string>

    //welcome activity
    <string name="welcome_activity_label">Welcome Activity</string>

    //login activity
    <string name="login_btn">Login</string>
    <string name="facebook_app_id">478302712341221</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="title_activity_login">Sign In</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="dont_have_account">Don\'t have an Account?</string>

    //registration activity
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="title_activity_register">Register</string>
    <string name="register_button">Sign Up</string>
    <string name="register_question">Have an account?</string>creat
    <string name="register_login">Login</string>
    <string name="register_btn">Register</string>

    //reset password activity
    <string name="reset_password_email_box">Enter Your Email</string>
    <string name="reset_button">Reset Password</string>
    <string name="forgot_passwordTV">Forgot Password?</string>


    //role option activity
    <string name="title_activity_role_option">RoleOptionActivity</string>
    <string name="bidder_btn">I am a Bidder</string>
    <string name="planner_btn">I am a Planner</string>
    <string name="title_activity_bidder_dash">BidderDashActivity</string>
    <string name="title_activity_planner_dash">Planner Dashboard</string>

    //dashboard
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_role">Select Role</string>

    // create event Activity
    <string name="title_activity_create_event">Create Event</string>
    <string name="create_event_name">Event Name</string>
    <string name="create_event_date">Event Date</string>
    <string name="create_event_venue">Venue</string>
    <string name="create_event_image">Select Image</string>
    <string name="create_event_button_text">Create Event</string>
    <string name="create_event_description">Event Description</string>
    <string name="create_event_entry_fee">Entry Fee</string>

    <string-array name="events_categories">
        <item>General</item>
        <item>Art</item>
        <item>Music</item>
        <item>Technology</item>
    </string-array>

    // event details activity
    <string name="title_activity_event_details">Event Details</string>
    <string name="Event_Description_Text">Description:</string>
    <string name="Event_Date_Text">Date:</string>
    <string name="Event_Category_Text">Category:</string>

    //planner event list activity
    <string name="title_activity_planner_event">My Events</string>

    //plannerDash
    <string name="planner_dash_create_event">Create Event</string>
    <string name="planner_dash_manage_events">Manage Events</string>
    <string name="planner_dash_view_report">View Report</string>

    <string name="planner_dash_count_default">10</string>
    <string name="planner_dash_content_description">message notification</string>
    <string name="planner_dash_latest_bids">Latest Bid</string>
    <string name="planner_dash_bid_label">B</string>
    <string name="planner_dash_bid_item_image_desc">Bid item Image</string>
    <string name="planner_dash_item_name">Samsung 21\'TV set</string>
    <string name="planner_dash_default_event_name">Event Name: </string>
    <string name="planner_dash_event_name">China Town Auction</string>
    <string name="create_event_form_toast">Event Created.</string>
    <string name="update_event_form_toast">Event Updated.</string>
    <string name="event_detail_internet_error">No Internet Connection</string>

    <string name="cancel_event_title">Cancel Event</string>
    <string name="cancel_event_message">Are you sure you want to cancel event? You will lose all data entered.</string>

    <string name="delete_event_message">You will loose all your data in the event if you continue</string>
    <string name="delete_event_title">Do you want to delete this event?</string>
    <string name="delete_event_error">This event has been entered and cannot be deleted!</string>

    <string name="delete_item_title">Do you want to delete this item?</string>
    <string name="delete_item_message">This can not be reversed if you choose to continue</string>
    <string name="delete_event_toast_message">Event Deleted</string>
    <string name="title_activity_bidder_event_list">Events</string>
    <string name="bidder_event_list_dialog">" events"</string>
    <string name="event_search_hint">Search Events</string>
    <string name="title_activity_bidder_events_tab">Events</string>
    <string name="bidder_dashboard_title">Bidder Dashboard</string>
    <string name="Event_list_progress_dialog">My event list</string>
    <string name="event_list_progress_loading">Loading...</string>
    <string name="event_list_progress_saving">Saving...</string>
    <string name="enter_event_button_text">Enter Event</string>
    <string name="title_activity_payment">Select Payment</string>
    <string name="paypal_button_string">Pay With PayPal</string>
    <string name="square_button_string">Pay With Square</string>
    <string name="stripe_button_string">Pay With Stripe</string>
    <string name="payment_amount_text">$</string>
    <string name="payment_success_text">You have successfully made entry payment for the above event</string>
    <string name="payment_success_title">Payment Success</string>
    <string name="proceed_button_text">Proceed</string>
    <string name="payment_name_title">"Name: "</string>
    <string name="payment_amount_title">"Entry Fee: "</string>
    <string name="usd_text">USD</string>
    <string name="item_bid_hint">Enter Amount</string>
    <string name="item_bid_minimum_bid_label">Minimum Bid: </string>
    <string name="payment_error_text">Unknown Payment Error. Please Try Again</string>
    <string name="payment_error">Payment Error</string>
    <string name="object_id_reference">OBJECT_ID</string>
    <string name="is_planner_reference">IS_PLANNER</string>
    <string name="eventId_reference">eventId</string>
    <string name="isPlanner_reference">isPlanner</string>
    <string name="resetPasswordErrorToast">Please enter a valid email address</string>
    <string name="resetPasswordSuccessToast">Reset link sent to your email</string>
    <string name="title_activity_my_bid">My Bids</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_view_report_activity">Report</string>

</resources>

