<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_success_title"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/payment_success_text"
        android:textColor="#00838F"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/stripe_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/enter_event_button_style"
        android:background="#00838F"
        android:text="@string/proceed_button_text" />


</LinearLayout>