<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payment Options"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/paypal_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/enter_event_button_style"
        android:background="#003561"
        android:text="@string/paypal_button_string" />

    <Button
        android:id="@+id/square_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/enter_event_button_style"
        android:background="#56514D"
        android:text="@string/square_button_string" />

    <Button
        android:id="@+id/stripe_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/enter_event_button_style"
        android:background="#67BCF3"
        android:text="@string/stripe_button_string" />


</LinearLayout>