<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.worldtreeinc.leaves.activity.LoginActivity">

    <com.rey.material.widget.ProgressView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
        app:pv_progressMode="indeterminate"
        android:id="@+id/loading"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/project_name"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_gravity="center"
        android:textColor="#00838F"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/usernameLoginTextBox"
        android:layout_below="@+id/textView"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordLoginTextBox"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/usernameLoginTextBox"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordLoginTextBox"
        android:layout_marginTop="15dp"
        android:background="#00838F"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="5dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:id="@+id/textView4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register_button"
            android:id="@+id/registerUser"
            android:textColor="#00838F"
            android:layout_marginLeft="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/orLayout"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/abc_list_divider_mtrl_alpha">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/forgot_passwordTV"
            android:id="@+id/resetPassword"
            android:textColor="#00838F"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/orLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rsz_facebookloginbutton"
            android:background="@android:color/transparent"
            android:id="@+id/facebookloginbutton"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/twitterloginbutton"
            android:background="@android:color/transparent"
            android:src="@drawable/rsz_twitterloginbutton"
            android:layout_weight= "1"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/GoogleLoginButton"
            android:background="@android:color/transparent"
            android:src="@drawable/rsz_googleloginbutton"
            android:layout_weight="1"
            />
    </LinearLayout>

</RelativeLayout>