<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.worldtreeinc.leaves.activity.GetStartedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:layout_gravity="top|left"
        android:textColor="#fff"
        android:text="Logout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#8000838F"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:layout_marginTop="100dp"
            android:textColor="#fff"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id ="@+id/bidderBtn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textColor="#fff"
            android:layout_marginTop="200dp"
            android:text="@string/bidder_btn"
            android:textSize="20sp"
            android:background="@drawable/button_transparent_white_border"
            android:padding="15dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id ="@+id/plannerBtn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:text="@string/planner_btn"
            android:textSize="20sp"
            android:background="@drawable/button_transparent_white_border"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>