<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp" >

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/create_event_name"
                android:hint="@string/create_event_name"
                android:layout_marginTop="60dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp" >

            <com.rey.material.widget.Spinner
                style="@style/Material.Widget.Spinner"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:id="@+id/events_categories_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp" >

            <EditText
                android:id="@+id/create_event_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/create_event_date"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" >
            </EditText>
            <ImageButton
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectDate"
                android:cropToPadding="true"
                android:src="@drawable/calendar_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/create_event_venue"
                android:hint="@string/create_event_venue" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectDate"
                android:cropToPadding="true"
                android:src="@drawable/location_icon"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/default_image"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gallery_icon"
                android:layout_gravity="right|bottom"
                android:clickable="true"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rey.material.widget.Button
                style="@style/Material.Drawable.Ripple.Wave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_event_button_text"
                android:background="#00838F"
                android:textColor="#FFFFFF"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                app:rd_enable="true"
                app:rd_backgroundColor="#2196F3" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

